--- a/apps/cbv/templates/cbv/school_detail.html
+++ b/apps/cbv/templates/cbv/school_detail.html
@@ -17,4 +17,8 @@
 
 </div>
 
+<div class="container">
+	<p><a class="btn btn-warning" href="{% url 'cbv:update' pk=school_detail.pk %}">Update</a></p>
+</div>
+
 {% endblock %}
